Fix alignment of elements in page. Remove gaps between sections.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -29,6 +29,7 @@ html {
     position: relative;
     top: 20vh;
     left: 50vw;
+    margin: 0;
 }
 
 h2 {
